# PAE_Joystick

./: CMakeLists.txt  README.md
dyn/: dyn_app_sensor.c  dyn_app_sensor.h  dyn_frames.c  dyn_instr.c  dyn_motors.c  dyn_motors.h
dyn_test/: dyn_emu.c
hal_dyn_uart/: hal_dyn_uart.c  hal_dyn_uart.h  hal_dyn_uart_emu.c  hal_dyn_uart_emu.h
joystick_emu/: joystick.c
main/: main.c  main.h
